feat: Add mobile hamburger menu

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
     transform: translateY(-3px);
 }
 
-ul {
+url {
     list-style: none;
 }
 
@@ -859,3 +859,4 @@ img {
 }
 
 /* --- End of New Code --- */
+
