--- a/style.css
+++ b/style.css
@@ -750,9 +750,12 @@ img {
         margin: 1.5rem 0;
         margin-left: 0;
     }
+    
     .nav-links a {
          font-size: 1.2rem;
+         color: var(--accent-color); /* Set a contrasting color */
     }
+    
     .nav-resume {
         margin-left: 0;
         margin-top: 1.5rem;
